# QBNex

./: .dockerignore  .gitattributes  .gitignore  BUG_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  build-installer.ps1  build-installer.sh  docker-compose.yml  findcurl.cmd  qb  qb.cmd  reset.cmd  setup_lnx.sh  setup_osx.command  setup_win.cmd
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: portable_bundle.ps1  portable_bundle.sh  release_notes.sh  stage_portable_bundle.ps1  stage_portable_bundle.sh
.github/workflows/: ci.yml  pull_request.yml  push.yml  release.yml
analyzer/: Cargo.toml
analyzer/src/: lib.rs  scope.rs  type_checker.rs
cli/: Cargo.toml
cli/src/: feature_check.rs  main.rs
cli_tool/: Cargo.toml
cli_tool/src/: feature_check.rs  main.rs
cli_tool/tests/: compile_smoke_test.rs  shell_cli.rs
codegen/: Cargo.toml
codegen/src/: backend.rs  codegen.rs  cranelift_jit.rs  lib.rs  linker.rs  llvm_builder.rs
codegen/src/codegen/: expr.rs  graphics.rs  program.rs  state.rs
config/: qbnex.ini
core_types/: Cargo.toml
core_types/src/: errors.rs  lib.rs
docs/: core-library-infrastructure.md
examples/: arrays.bas  calc.bas  fileio.bas  functions.bas  graphics.bas  hello.bas  loop.bas  test_all.bas  test_graphics_advanced.bas  test_graphics_getput.bas  test_graphics_modules.bas  types.bas
frontend/: Cargo.toml
frontend/src/: ast_nodes.rs  backend.rs  frontend.rs  lib.rs  parser.rs
frontend/src/frontend/: chumsky_frontend.rs
hal_layer/: Cargo.toml
hal_layer/src/: file_io.rs  sound_synth.rs
hal_layer/src/vga_graphics/: image.rs  mod.rs  (+4 more)
include/: qbnex_version.h
installer/: INFO.txt  README.md  qbnex_setup.iss  setup.iss
internal/: clean.bat  clean.sh
internal/c/: common.h  libqb.cpp  libqb.h  msbin.c  msbin.cpp  myip.cpp  os.h  qbx.cpp  time64.cpp  time64.h
internal/source/: call_windres.bat  clear.txt  data1.txt  data10.txt  data100.txt  data101.txt  data102.txt  data103.txt  data104.txt  data105.txt  data106.txt  data107.txt  data108.txt  data109.txt  data11.txt  data110.txt  data111.txt  data112.txt  data114.txt  data115.txt  data116.txt  data117.txt  data118.txt  data119.txt  data12.txt  data120.txt  data121.txt  data122.txt  data123.txt  data124.txt  data125.txt  data126.txt  data127.txt  data128.txt  data129.txt  data13.txt  data130.txt  data131.txt  data132.txt  data137.txt  (+281 more)
lexer/: Cargo.toml
lexer/src/: lib.rs  scanner.rs  tokens.rs
licenses/: COPYING.TXT  LICENSE
native_codegen/: Cargo.toml
native_codegen/src/: backend.rs  codegen.rs  cranelift_jit.rs  lib.rs  llvm_builder.rs
native_codegen/src/codegen/: expr.rs  graphics.rs  program.rs  state.rs
native_codegen/tests/: bload_bsave_codegen.rs  compat_helpers_codegen.rs  fixed_string_codegen.rs  loop_codegen_debug.rs  random_field_codegen.rs  static_udt_codegen.rs  string_array_fileio_codegen.rs  udt_array_codegen.rs
platform/: Cargo.toml
platform/src/: file_io.rs  lib.rs
qbnex-completeness-roadmap/: SKILL.md
runtime/: Cargo.toml
runtime/src/: builtin_functions.rs  compiler.rs  opcodes.rs  runtime.rs
scripts/: package_release.py  qb  setup_lnx.sh  setup_osx.command  setup_win.cmd
semantics/: Cargo.toml
semantics/src/: scope.rs  type_checker.rs
source/: .gitignore  icon.rc  qb64.bas  qbnex.bas
source/compiler/: code_generator.bas  main.bas  modern_syntax.bas  parser.bas  symbol_table.bas
source/global/: IDEsettings.bas  compat.bas  compat_defs.bas  compiler_phases.bas  compiler_settings.bas  constants.bas  hash_table.bas  incremental_compile.bas  integration_module.bas  jit_compilation.bas  llvm_backend.bas  optimization.bas  parallel_processing.bas  settings.bas  single_pass.bas  state_management.bas  version.bas
source/ide/: ide_methods.bas
source/includes/: bootstrap.bas  codegen.bas  frontend.bas  runtime.bas  support.bas
source/stdlib/: README.md  json.bas  qbnex_stdlib.bas  stdlib.bas  url.bas
source/subs_functions/: subs_functions.bas
source/utilities/: artifacts.bas  classes.bas  cli.bas  config.bas  consteval.bas  context.bas  dependencies.bas  directives.bas  error_handler.bas  error_handler_defs.bas  errors.bas  file.bas  hash.bas  imports.bas  labels.bas  link_symbols.bas  linker.bas  parsing.bas  prepass.bas  semantics.bas  shutdown.bas  sources.bas  startup.bas  state.bas  strings.bas  symbols.bas  tokens.bas  types.bas  udts.bas  variables.bas
source/utils/: error_handler.bas  logging.bas
src/compiler/: main.bas
src/core/: constants.bas  settings.bas  version.bas
syntax_tree/: Cargo.toml
syntax_tree/src/: ast_nodes.rs  backend.rs  frontend.rs  lib.rs  parser.rs
syntax_tree/src/frontend/: chumsky_frontend.rs
syntax_tree/tests/: parser_test.rs
test/: README.md  qb64.bas
tests/: README.md  audio_smoke.cmd  audio_smoke.sh  benchmark_smoke.cmd  benchmark_smoke.sh  cli_smoke.cmd  cli_smoke.sh  diagnostics_smoke.cmd  diagnostics_smoke.sh  encoding_smoke.cmd  encoding_smoke.sh  labels_smoke.cmd  labels_smoke.sh  regression_tests.bas  stdlib_smoke.cmd  stdlib_smoke.sh  test_framework.bas  warnings_smoke.cmd  warnings_smoke.sh
tests/fixtures/: audio_synth_success.bas  benchmark_large.bas  benchmark_stress.bas  cli_console_output.bas  diagnostics_compile_error.bas  diagnostics_include_chain_main.bas  diagnostics_include_chain_mid.bas  fixture_io_catalog.rs  label_ambiguous_data.bas  label_missing_failure.bas  label_recompile_success.bas  label_scope_conflict.bas  qbnex_stdlib_include_success.bas  stdlib_import_success.bas  unused_variable_warning.bas  url_import_success.bas
tests/runners/: run-cli-regression-suite.ps1  run_cli_regression_suite.py
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  scanner.rs  tokens.rs
tokenizer/tests/: integration_test.rs
types/: Cargo.toml
types/src/: data_types.rs  errors.rs  memory_map.rs
vm_engine/: Cargo.toml
vm_engine/src/: builtin_functions.rs  compiler.rs  lib.rs  opcodes.rs  runtime.rs
vm_engine/tests/: vm_test.rs
(+135 files in other folders)
