[workspace]
resolver = "2"
members = [
    "cli",
    "types",
    "lexer",
    "frontend",
    "semantics",
    "runtime",
    "codegen",
    "platform",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["thirawat27"]
license = "MIT"
description = "QBNex: QBasic/QuickBASIC Compiler and Interpreter"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
