[package]
name = "cli_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "qb"
path = "src/main.rs"

[dependencies]
tokenizer      = { path = "../tokenizer" }
syntax_tree    = { path = "../syntax_tree" }
analyzer       = { path = "../analyzer" }
vm_engine      = { path = "../vm_engine" }
native_codegen = { path = "../native_codegen" }
anyhow         = "1.0"
