[package]
name = "cli_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "qb"
path = "src/main.rs"

[[test]]
name = "compile_smoke_test"
path = "../test/integration/cli_tool/compile_smoke_test.rs"

[[test]]
name = "shell_cli"
path = "../test/integration/cli_tool/shell_cli.rs"

[dependencies]
core_types     = { path = "../core_types" }
syntax_tree    = { path = "../syntax_tree" }
analyzer       = { path = "../analyzer" }
vm_engine      = { path = "../vm_engine" }
native_codegen = { path = "../native_codegen" }
anyhow         = "1.0"
miette         = { version = "7.4", features = ["fancy"] }
thiserror      = "2.0"
