[package]
name = "tokenizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[[test]]
name = "integration_test"
path = "../tests/integration/lexer/lexer_integration_suite.rs"

[dependencies]
core_types = { path = "../types" }
