[package]
name = "vm_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
core_types = { path = "../core_types" }
syntax_tree = { path = "../syntax_tree" }
hal_layer = { path = "../hal_layer" }
chrono = "0.4"
